--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -11,8 +11,8 @@
         </a>
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Features</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Enterprise</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/thread">Бесконечный тред</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/thread/add">Добавить сообщение</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
             <a class="py-2 text-dark text-decoration-none" href="#">Pricing</a>
         </nav>
